--- a/faq.html
+++ b/faq.html
@@ -137,6 +137,10 @@
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
             <p>
+                <b>Do you offer VSEL treatments to the public?</b> <br>
+                No, currently we are only recruiting for clinical trials for heart failure.
+            </p>
+            <p>
                 <b>What types of stem cells do you use?</b> <br>
                 We use only VSELs, which stands for "very small embryonic-like" stem cells.
             </p>
@@ -169,6 +173,7 @@
                 <b>Does the treatment have side effects?</b> <br>
                 We know of no serious side effects from autologous treatment.  Ten to twenty percent of the time a patient will feel very tired for a few days.
             </p>
+            <!--
             <p>
                 <b>What is the cost of treatment?</b> <br>
                 The treatment costs $6,000.  If a patient can not afford treatment, and their medical situation is critical, then we may provide treatment for less or for free.
@@ -177,6 +182,7 @@
                 <b>How does your treatment compare to other clinics?</b> <br>
                 Most clinics charge $7,000 to $11,000 for the same treatment.
             </p>
+            -->
             <p>
                 <b>Will my insurance cover the cost of treatment?</b> <br>
                 Insurance companies do not cover stem cell therapy.
