--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
-            We will soon start recruiting for a randomized clinical trial of VSEL therapy in patients with heart failure.  The trial will be in San Diego CA.  If you are interested in participating in this trial please contact us.
+            We are recruiting for a randomized clinical trial of VSEL stem cell treatment in patients with heart failure.  The trial will be in San Diego CA.  All treatment will be provided for free.  If you are interested in participating in this trial please contact us.
 
           </div>
         </div> <!-- / .row -->
