--- a/routine.html
+++ b/routine.html
@@ -155,7 +155,7 @@
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>12:30 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
-<tr><td>        </td><td>Soup consisting of lentils, onion, pork, onion, with sunflower sprouts, strawberries</td>    
+<tr><td>        </td><td>Soup consisting of lentils, onion, pork, with sunflower sprouts, strawberries</td>    
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
