--- a/routine.html
+++ b/routine.html
@@ -144,7 +144,7 @@
 <tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
-<tr><td>8:30 AM </td><td>Molecular hydrogen supplement in one cup water</td>
+<tr><td>8:30 AM </td><td>Molecular hydrogen in one cup water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
@@ -177,8 +177,8 @@
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Floss teeth </td>
-<tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
 <tr><td>        </td><td>Tounge scraper </td>
+<tr><td>        </td><td>Sometimes Hydro Floss with small amount of H₂O₂ </td>
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
@@ -187,7 +187,7 @@
 </table>
 
 <br>
-<p><b>Morning Supplements in capsule form</b></p>
+<p><b>Morning Supplements</b></p>
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow</td>
@@ -267,6 +267,7 @@
 <p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Blood testing at Labcorp or Quest (No biotin for a few days before test) </td>
+<tr><td> </td><td>Stool occult blood immunoassay at Kaiser Permanente</td>
 <tr><td> </td><td>Replace shower water filter </td>
 <tr><td> </td><td>Replace kitchen water filter </td>
 </table>
