--- a/routine.html
+++ b/routine.html
@@ -150,8 +150,8 @@
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
+<tr><td>        </td><td>Cucumber, macadamia nuts</td>
 <tr><td>        </td><td>Morning supplements</td>
-<tr><td>        </td><td>Cucumber peeled, sometimes macadamia nuts</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>12:30 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
@@ -178,7 +178,7 @@
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
-<tr><td>        </td><td>Sometimes Hydro Floss with small amount of H₂O₂ </td>
+<tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>8:15 PM </td><td>Turn off computer </td>
@@ -214,6 +214,7 @@
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Creatine powder, Thorne</td>
 <tr><td>        </td><td>Pomela powder, Nootropics Depot</td>
+<tr><td>        </td><td>Blue-Green Algae Powder, Pure Synergy</td>
 <tr><td>        </td><td>Sea Buckthorne powder, Loov Organic</td>
 </table>
 
@@ -221,7 +222,7 @@
 <br>
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Various mini exercises</td>
+<tr><td> </td><td>Various short exercises</td>
 <tr><td> </td><td>Jump for lymphatic system</td>
 <tr><td> </td><td>Stand at a standup desk while working</td>
 <tr><td> </td><td>Go outside, look far away</td>
@@ -267,7 +268,7 @@
 <p><b>Yearly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Blood testing at Labcorp or Quest (No biotin for a few days before test) </td>
-<tr><td> </td><td>Stool occult blood immunoassay at Kaiser Permanente</td>
+<tr><td> </td><td>Stool occult blood immunoassay</td>
 <tr><td> </td><td>Replace shower water filter </td>
 <tr><td> </td><td>Replace kitchen water filter </td>
 </table>
