--- a/routine.html
+++ b/routine.html
@@ -146,20 +146,22 @@
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen in one cup water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
-<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations (Best taken before a meal)</td>
+<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 320mg (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
 <tr><td>        </td><td>Cucumber, macadamia nuts</td>
+<tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>12:30 PM </td><td>Lunch</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Soup consisting of lentils, onion, pork, with sunflower sprouts, strawberries</td>    
-<tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
-<tr><td>        </td><td>Primal Multi, Designs for Health</td>
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
-<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations</td>
+<tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
+<tr><td>        </td><td>EnzymixPro, Apex Energetics, 1 capsule</td>
+<tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 150mg</td>
+<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 150mg</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes to prevent myopia</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
@@ -168,12 +170,12 @@
 <tr><td>5:00 PM </td><td>Dinner</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
-<tr><td>        </td><td>Prunes for dessert</td>
+<tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
-<tr><td>        </td><td>Primal Multi, Designs for Health</td>
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
-<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola</td>
-<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex</td>
+<tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 150mg</td>
+<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 100mg</td>
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 300mg</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Floss teeth </td>
@@ -181,7 +183,7 @@
 <tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
-<tr><td>8:15 PM </td><td>Turn off computer </td>
+<tr><td>        </td><td>Turn off computer </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
 <tr><td>10:00 PM</td><td>Go to sleep </td>
 </table>
@@ -189,33 +191,33 @@
 <br>
 <p><b>Morning Supplements</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>Primal Multi, Designs for Health</td>
-<tr><td>        </td><td>Vitamin D3, Jarrow</td>
+<tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
+<tr><td>        </td><td>Vitamin D3, Jarrow, 2000IU</td>
 <tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health</td>
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations</td>
-<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations</td>
-<tr><td>        </td><td>Myco Supreme, Designs For Health</td>
-<tr><td>        </td><td>Organ Synergy, Designs For Health</td>
-<tr><td>        </td><td>Astaxanthin, Designs For Health</td>
-<tr><td>        </td><td>Aloe/200x, Designs For Health</td>
-<tr><td>        </td><td>Annatto-E Synergy, Designs For Health</td>
-<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex</td>
-<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension</td>
-<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne</td>
-<tr><td>        </td><td>Perfect Amino, Body Health</td>
-<tr><td>        </td><td>Hyaluronic acid, Do Not Age</td>
-<tr><td>        </td><td>Cell Protector, Pure Synergy</td>
-<tr><td>        </td><td>Broc Elite Plus, Mara Labs</td>
-<tr><td>        </td><td>Rutin, Now Foods</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 150mg</td>
+<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 150mg</td>
+<tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
+<tr><td>        </td><td>Organ Synergy, Designs For Health, 3 capsules</td>
+<tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>
+<tr><td>        </td><td>Aloe/200x, Designs For Health, 1 capsule</td>
+<tr><td>        </td><td>Annatto-E Synergy, Designs For Health, 2 capsules</td>
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
+<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>
+<tr><td>        </td><td>NAC (N-Acetylcysteine), Thorne, 1 capsule</td>
+<tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td>
+<tr><td>        </td><td>Hyaluronic acid, Do Not Age, 1 capsule</td>
+<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td>
+<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td>
+<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td>
 </table>
 
 <br>
 <p><b>Morning Supplements in powder form</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>Creatine powder, Thorne</td>
-<tr><td>        </td><td>Pomela powder, Nootropics Depot</td>
-<tr><td>        </td><td>Blue-Green Algae Powder, Pure Synergy</td>
-<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic</td>
+<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td>
+<tr><td>        </td><td>Pomela powder, Nootropics Depot, 1/16 tsp</td>
+<tr><td>        </td><td>Blue-Green Algae Powder, Pure Synergy, 1/2 tsp</td>
+<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td>
 </table>
 
 
@@ -326,7 +328,6 @@
 <tr><td> </td><td>No IV antibiotics</td>
 <tr><td> </td><td>Minimal NSAIDs</td>
 <tr><td> </td><td>No heavy metals</td>
-<tr><td> </td><td>Minimal mRNA vaccines</td>
 <tr><td> </td><td>Minimal personal care products</td>
 
 <tr><td> </td><td>No bright lights late at night</td>
