--- a/routine.html
+++ b/routine.html
@@ -142,7 +142,7 @@
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
 <tr><td>        </td><td>Weigh self on scale</td>
 <tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
-<tr><td>        </td><td>Red and infrared light therapy on entire body</td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
+<tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen in one cup water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
@@ -150,7 +150,7 @@
 <tr><td>9:30 AM </td><td>Breakfast</td>
 <tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
-<tr><td>        </td><td>Cucumber, macadamia nuts</td>
+<!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
