--- a/routine.html
+++ b/routine.html
@@ -144,7 +144,7 @@
 <tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
-<tr><td>8:30 AM </td><td>Molecular hydrogen in one cup water</td>
+<tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of room-temperature water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 320mg (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>
@@ -250,14 +250,14 @@
 <br>
 <p><b>Bioregulator Peptide Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Epitalon</td>
-<tr><td> </td><td>Pinealon</td>
-<tr><td> </td><td>Tymogen</td>
-<tr><td> </td><td>Vesugen</td>
-<tr><td> </td><td>Vilon</td>
-<tr><td> </td><td>Cardiogen</td>
-<tr><td> </td><td>Cortagen</td>
-<tr><td> </td><td>Crystagen</td>
+<tr><td> </td><td>Epitalon, 100mcg</td>
+<tr><td> </td><td>Pinealon, 100mcg</td>
+<tr><td> </td><td>Tymogen, 100mcg</td>
+<tr><td> </td><td>Vesugen, 100mcg</td>
+<tr><td> </td><td>Vilon, 100mcg</td>
+<tr><td> </td><td>Cardiogen, 100mcg</td>
+<tr><td> </td><td>Cortagen, 100mcg</td>
+<tr><td> </td><td>Crystagen, 100mcg</td>
 </table>
 
 <br>
