--- a/routine.html
+++ b/routine.html
@@ -141,7 +141,7 @@
 <table style="celllpadding: 100px">
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness for circadian rhythm</td>
 <tr><td>        </td><td>Weigh self on scale</td>
-<tr><td>        </td><td>Various exercise including weight lifting, sprinting, blood flow restriction training</td>
+<tr><td>        </td><td>Weight lifting twice a week</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
 <!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of room-temperature water</td>
@@ -242,8 +242,8 @@
 <br>
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
 <tr><td> </td><td>VSEL (Very small embryonic-like) stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Exosome therapy</td>
 <tr><td> </td><td>Inject bioregulators peptides from Can-Lab</td>
 </table>
 
@@ -317,7 +317,6 @@
 <tr><td> </td><td>Minimal iodine</td>
 <tr><td> </td><td>Minimal caffeine</td>
 
-<tr><td> </td><td>Meat is cooked slowly at very low temperature</td>
 <tr><td> </td><td>Food contacts only glass or ceramic</td>
 <tr><td> </td><td>Food never contacts plastic </td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
@@ -340,7 +339,17 @@
 <tr><td> </td><td>No mouthwash </td>
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
+<tr><td> </td><td>Do not put fingers in nose, might cause dementia</td>
 </table>
+              
+<br>
+<p><b>Future Plans</b></p>
+<table style="celllpadding: 100px">
+<tr><td> </td><td>Blood flow restriction training </td>
+<tr><td> </td><td>Grow all food in my own garden </td>
+<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+</table>
+
 
           </div>
         </div> <!-- / .row -->
