--- a/routine.html
+++ b/routine.html
@@ -176,7 +176,7 @@
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 150mg</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 100mg</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 300mg</td>
-<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>
+<!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
@@ -224,10 +224,10 @@
 <br>
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Various short exercises</td>
-<tr><td> </td><td>Jump for lymphatic system</td>
 <tr><td> </td><td>Stand at a standup desk while working</td>
+<tr><td> </td><td>Various short exercises</td>
 <tr><td> </td><td>Go outside, look far away</td>
+<!--<tr><td> </td><td>Jump for lymphatic system</td>-->
 </table>
 
 <br>
@@ -242,9 +242,9 @@
 <br>
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>VSEL (Very small embryonic-like) stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
+<tr><td> </td><td>VSEL stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Exosome therapy</td>
-<tr><td> </td><td>Inject bioregulators peptides from Can-Lab</td>
+<tr><td> </td><td>Inject bioregulators peptides</td>
 </table>
 
 <br>
@@ -306,10 +306,10 @@
 <tr><td> </td><td>No high-heat cooking</td>
 <tr><td> </td><td>No fruit juice</td>
 <tr><td> </td><td>No alcohol</td>
-<tr><td> </td><td>No flour</td>
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No industrial seed oils</td>
 <tr><td> </td><td>No freshwater or farmed fish</td>
+<tr><td> </td><td>Minimal flour</td>
 <tr><td> </td><td>Minimal acellular carbohydrates</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
@@ -317,20 +317,20 @@
 <tr><td> </td><td>Minimal iodine</td>
 <tr><td> </td><td>Minimal caffeine</td>
 
-<tr><td> </td><td>Food contacts only glass or ceramic</td>
 <tr><td> </td><td>Food never contacts plastic </td>
+<tr><td> </td><td>Food contacts only glass or ceramic</td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
 
 <tr><td> </td><td>Minimal chemicals</td>
+<tr><td> </td><td>Minimal heavy metals</td>
 <tr><td> </td><td>Minimal drugs</td>
 <tr><td> </td><td>Minimal antibiotics</td>
 <tr><td> </td><td>No IV antibiotics</td>
 <tr><td> </td><td>Minimal NSAIDs</td>
-<tr><td> </td><td>No heavy metals</td>
 <tr><td> </td><td>Minimal personal care products</td>
 
 <tr><td> </td><td>No bright lights late at night</td>
-<tr><td> </td><td>No EMFs, cordless phones, WIFI routers, cell phones</td>
+<tr><td> </td><td>No EMFs, cordless phones, WIFI routers</td>
 <tr><td> </td><td>Minimal x-rays and CT scans</td>
 <tr><td> </td><td>Minimal TV</td>
 <tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
@@ -339,7 +339,7 @@
 <tr><td> </td><td>No mouthwash </td>
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
-<tr><td> </td><td>Do not put fingers in nose, might cause dementia</td>
+<!--<tr><td> </td><td>Do not put fingers in nose, might cause dementia</td>-->
 </table>
               
 <br>
