--- a/routine.html
+++ b/routine.html
@@ -332,6 +332,8 @@
 <tr><td> </td><td>Minimal TV</td>
 <tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
 
+<tr><td> </td><td>No gas stoves, use only electric</td>
+
 <tr><td> </td><td>No mouth breathing</td>
 <tr><td> </td><td>No mouthwash </td>
 <tr><td> </td><td>No root canals</td>
@@ -342,6 +344,8 @@
 <br>
 <p><b>Future Plans</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>Sauna </td>
+<tr><td> </td><td>PEMF therapy </td>
 <tr><td> </td><td>Blood flow restriction training </td>
 <tr><td> </td><td>Grow all food in my own garden </td>
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
