--- a/routine.html
+++ b/routine.html
@@ -143,38 +143,29 @@
 <tr><td>        </td><td>Weigh self on scale</td>
 <tr><td>        </td><td>Weight lifting twice a week</td>
 <tr><td>        </td><td>Red and infrared light therapy on entire body <a href="https://platinumtherapylights.com/" target="_blank">Link</a> </td> <!-- must use before sunscreen else sunscreen blocks red/IR light?-->
-<!--<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>-->
+<tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of room-temperature water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
 <tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 320mg (Best taken before a meal)</td>
-<tr><td>9:30 AM </td><td>Breakfast</td>
-<tr><td>        </td><td>Rinse mouth with xylitol</td>    
+<tr><td>9:30 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
-<tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>Morning supplements</td>
-<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
-<tr><td>12:30 PM </td><td>Lunch</td>
-<tr><td>        </td><td>Rinse mouth with xylitol</td>    
+<tr><td>12:30 PM </td><td>Lunch</td>   
 <tr><td>        </td><td>Soup consisting of lentils, onion, pork, with sunflower sprouts, strawberries</td>    
-<tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics, 1 capsule</td>
-<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes to prevent myopia</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
 <tr><td>4:00 PM </td><td>Drink water</td>
 <tr><td>5:00 PM </td><td>Dinner</td>
-<tr><td>        </td><td>Rinse mouth with xylitol</td>    
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
-<tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 150mg</td>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 100mg</td>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 300mg</td>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
-<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
 <tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
@@ -219,6 +210,15 @@
 
 
 <br>
+<p><b>At every meal</b></p>
+<table style="celllpadding: 100px">
+<tr><td>        </td><td>Rinse mouth with xylitol before eating </td>
+<tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td>
+<tr><td>        </td><td>Brush teeth 30 minutes after eating</td>
+</table>
+
+              
+<br>
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Stand at a standup desk while working</td>
@@ -240,8 +240,10 @@
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>VSEL stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Ozone dialysis therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Exosome therapy</td>
-<tr><td> </td><td>Inject bioregulators peptides</td>
+<tr><td> </td><td>Bioregulators peptides</td>
 </table>
 
 <br>
@@ -286,7 +288,8 @@
 <br>
 <p><b>One-time setup</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/bio-renew-system" target="_blank">Link</a></td>
+<tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/ophora-bio-quantum" target="_blank">Link</a></td>
+<tr><td> </td><td>Whole house water filter <a href="https://shop.ophorawater.com/collections/whole-home-systems/products/ophora-uf-filtration-series" target="_blank">Link</a></td>
 <tr><td> </td><td>Whole house air filter from iqair.com</td>
 <tr><td> </td><td>Cookware from xtrema.com </td>
 <tr><td> </td><td>Standing desk from varidesk.com</td>
@@ -296,7 +299,7 @@
 </table>
 
 <br>
-<p><b>General</b></p>
+<p><b>Avoid</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>No processed food</td>
 <tr><td> </td><td>No burned or blackened foods</td>
@@ -315,7 +318,6 @@
 <tr><td> </td><td>Minimal caffeine</td>
 
 <tr><td> </td><td>Food never contacts plastic </td>
-<tr><td> </td><td>Food contacts only glass or ceramic</td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
 
 <tr><td> </td><td>Minimal chemicals</td>
@@ -338,7 +340,7 @@
 <tr><td> </td><td>No mouthwash </td>
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
-<!--<tr><td> </td><td>Do not put fingers in nose, might cause dementia</td>-->
+<!--<tr><td> </td><td>Do not put fingers in nose</td>-->
 </table>
               
 <br>
@@ -348,7 +350,7 @@
 <tr><td> </td><td>PEMF therapy </td>
 <tr><td> </td><td>Blood flow restriction training </td>
 <tr><td> </td><td>Grow all food in my own garden </td>
-<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
+<tr><td> </td><td>Oxygen hot tub </td>
 </table>
 
 
