--- a/routine.html
+++ b/routine.html
@@ -222,6 +222,7 @@
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Stand at a standup desk while working</td>
+<tr><td> </td><td>Correct spine posture</td>
 <tr><td> </td><td>Various short exercises</td>
 <tr><td> </td><td>Go outside, look far away</td>
 <!--<tr><td> </td><td>Jump for lymphatic system</td>-->
@@ -243,7 +244,7 @@
 <tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Ozone dialysis therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Exosome therapy</td>
-<tr><td> </td><td>Bioregulators peptides</td>
+<tr><td> </td><td>Bioregulator peptides</td>
 </table>
 
 <br>
