--- a/routine.html
+++ b/routine.html
@@ -172,6 +172,7 @@
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>        </td><td>Turn off computer </td>
+<tr><td>        </td><td>Put on orange tinted glasses </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
 <tr><td>10:00 PM</td><td>Go to sleep </td>
 </table>
@@ -181,9 +182,9 @@
 <table style="celllpadding: 100px">
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
 <tr><td>        </td><td>Vitamin D3, Jarrow, 2000IU</td>
-<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health</td>
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 150mg</td>
-<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 150mg</td>
+<tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
+<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsul</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Organ Synergy, Designs For Health, 3 capsules</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>
@@ -310,6 +311,7 @@
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No industrial seed oils</td>
 <tr><td> </td><td>No freshwater or farmed fish</td>
+<tr><td> </td><td>No chocolate with heavy metals</td>
 <tr><td> </td><td>Minimal flour</td>
 <tr><td> </td><td>Minimal acellular carbohydrates</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
@@ -317,6 +319,7 @@
 <tr><td> </td><td>Minimal dairy</td>
 <tr><td> </td><td>Minimal iodine</td>
 <tr><td> </td><td>Minimal caffeine</td>
+<tr><td> </td><td>Minimal carbs at breakfast</td>
 
 <tr><td> </td><td>Food never contacts plastic </td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
@@ -342,6 +345,8 @@
 <tr><td> </td><td>No root canals</td>
 <tr><td> </td><td>No metal dental implants</td>
 <!--<tr><td> </td><td>Do not put fingers in nose</td>-->
+<!--<tr><td> </td><td>Do not blow nose with bathroom toilet paper</td>-->
+<!--<tr><td> </td><td>Do not store toothbrush in bathroom</td>-->
 </table>
               
 <br>
