--- a/routine.html
+++ b/routine.html
@@ -312,6 +312,7 @@
 <tr><td> </td><td>No industrial seed oils</td>
 <tr><td> </td><td>No freshwater or farmed fish</td>
 <tr><td> </td><td>No chocolate with heavy metals</td>
+<tr><td> </td><td>Minimal kale</td>
 <tr><td> </td><td>Minimal flour</td>
 <tr><td> </td><td>Minimal acellular carbohydrates</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
