--- a/routine.html
+++ b/routine.html
@@ -301,7 +301,7 @@
 </table>
 
 <br>
-<p><b>Avoid</b></p>
+<p><b>Avoid </b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>No processed food</td>
 <tr><td> </td><td>No burned or blackened foods</td>
@@ -332,7 +332,7 @@
 <tr><td> </td><td>No IV antibiotics</td>
 <tr><td> </td><td>Minimal NSAIDs</td>
 <tr><td> </td><td>Minimal personal care products</td>
-
+<tr><td> </td><td>No antiperspirant</td>
 <tr><td> </td><td>No bright lights late at night</td>
 <tr><td> </td><td>No EMFs, cordless phones, WIFI routers</td>
 <tr><td> </td><td>Minimal x-rays and CT scans</td>
