--- a/routine.html
+++ b/routine.html
@@ -146,15 +146,16 @@
 <tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of room-temperature water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
-<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 320mg (Best taken before a meal)</td>
+<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, one capsule (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>   
-<tr><td>        </td><td>Blend avocado, dandelion, blackberries, cranberries, lemon juice, water</td>
+<tr><td>        </td><td>Blend avocado, dandelion greens, berries, lemon juice, water</td>
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
 <tr><td>        </td><td>Morning supplements</td>
 <tr><td>12:30 PM </td><td>Lunch</td>   
-<tr><td>        </td><td>Soup consisting of lentils, onion, pork, with sunflower sprouts, strawberries</td>    
+<tr><td>        </td><td>Soup consisting of lentils, onion, pork, with sunflower sprouts, berries</td>    
 <tr><td>        </td><td>EnzymixPro, Apex Energetics, 1 capsule</td>
-<tr><td>        </td><td>Brisk walk outside for glucose uptake and dopamine into eyes to prevent myopia</td>
+<tr><td>        </td><td>Brisk walk outside for glucose uptake, and to get dopamine into eyes to prevent myopia</td>
+<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face</td>
 <tr><td>3:00 PM </td><td>Non-Sleep Deep Rest + NuCalm</td>
 <!--<tr><td>3:30 PM </td><td>Pulsed Electro-Magnetic Field therapy on full body, thymus etc</td>-->
 <tr><td>4:00 PM </td><td>Drink water</td>
@@ -226,7 +227,7 @@
 <tr><td> </td><td>Correct spine posture</td>
 <tr><td> </td><td>Various short exercises</td>
 <tr><td> </td><td>Go outside, look far away</td>
-<!--<tr><td> </td><td>Jump for lymphatic system</td>-->
+<tr><td> </td><td>Jump for lymphatic system and to correct posture</td>
 </table>
 
 <br>
@@ -311,16 +312,17 @@
 <tr><td> </td><td>No gluten</td>
 <tr><td> </td><td>No industrial seed oils</td>
 <tr><td> </td><td>No freshwater or farmed fish</td>
-<tr><td> </td><td>No chocolate with heavy metals</td>
-<tr><td> </td><td>Minimal kale</td>
 <tr><td> </td><td>Minimal flour</td>
 <tr><td> </td><td>Minimal acellular carbohydrates</td>
 <tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
 <tr><td> </td><td>Minimal iodine</td>
+<tr><td> </td><td>No fluoridated water</td>
 <tr><td> </td><td>Minimal caffeine</td>
 <tr><td> </td><td>Minimal carbs at breakfast</td>
+<tr><td> </td><td>No chocolate with heavy metals</td>
+<tr><td> </td><td>No kale with heavy metals</td>
 
 <tr><td> </td><td>Food never contacts plastic </td>
 <tr><td> </td><td>No Teflon or non-stick cookware</td>
