--- a/routine.html
+++ b/routine.html
@@ -136,6 +136,9 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-10 col-xl-10">
 
+<!--
+cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git push;
+-->
 
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
