--- a/routine.html
+++ b/routine.html
@@ -149,7 +149,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of room-temperature water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
-<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, one capsule (Best taken before a meal)</td>
+<tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, dandelion greens, berries, lemon juice, water</td>
 <!--<tr><td>        </td><td>Cucumber, macadamia nuts</td>-->
@@ -166,15 +166,15 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Various types of protein, wild rice, steamed vegetables, spices</td>
 <tr><td>        </td><td>EnzymixPro, Apex Energetics</td>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td>
-<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 150mg</td>
-<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 100mg</td>
-<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 300mg</td>
+<tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsulle</td>
+<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td>
+<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td>-->
 <tr><td>        </td><td>Floss teeth </td>
 <tr><td>        </td><td>Tounge scraper </td>
 <tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
-<tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
+<tr><td>8:1 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>        </td><td>Turn off computer </td>
 <tr><td>        </td><td>Put on orange tinted glasses </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
