--- a/routine.html
+++ b/routine.html
@@ -174,7 +174,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Tounge scraper </td>
 <tr><td>        </td><td>Hydro Floss with small amount of H₂O₂ </td>
 <tr><td>        </td><td>Sometimes dental oil pulling </td>
-<tr><td>8:1 PM </td><td>Lights dimmed to prepare for sleep</td>
+<tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td>
 <tr><td>        </td><td>Turn off computer </td>
 <tr><td>        </td><td>Put on orange tinted glasses </td>
 <tr><td>9:30 PM </td><td>Turn on air conditioner</td>
@@ -320,6 +320,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal linoleic acid</td>
 <tr><td> </td><td>Minimal oxalates</td>
 <tr><td> </td><td>Minimal dairy</td>
+<tr><td> </td><td>No whey protein powder</td>
 <tr><td> </td><td>Minimal iodine</td>
 <tr><td> </td><td>No fluoridated water</td>
 <tr><td> </td><td>Minimal caffeine</td>
