--- a/routine.html
+++ b/routine.html
@@ -188,7 +188,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Vitamin D3, Jarrow, 2000IU</td>
 <tr><td>        </td><td>OmegAvail Hi-Po, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Calcium Citrate, Pure Encapsulations, 1 capsule</td>
-<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsul</td>
+<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td>
 <tr><td>        </td><td>Myco Supreme, Designs For Health, 2 capsules</td>
 <tr><td>        </td><td>Organ Synergy, Designs For Health, 3 capsules</td>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule</td>
@@ -343,9 +343,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No EMFs, cordless phones, WIFI routers</td>
 <tr><td> </td><td>Minimal x-rays and CT scans</td>
 <tr><td> </td><td>Minimal TV</td>
-<tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
 
+<tr><td> </td><td>No fluorescent lights</td>
 <tr><td> </td><td>No gas stoves, use only electric</td>
+<tr><td> </td><td>No contact with outdoor high grass to avoid Lyme disease</td>
 
 <tr><td> </td><td>No mouth breathing</td>
 <tr><td> </td><td>No mouthwash </td>
