--- a/routine.html
+++ b/routine.html
@@ -149,6 +149,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>8:00 AM </td><td>Maragen ionic calcium in two cups water</td>
 <tr><td>8:30 AM </td><td>Molecular hydrogen, one tablet in one cup of room-temperature water</td>
 <tr><td>        </td><td>Brisk walk or jog outside for circadian rhythm </td>
+<tr><td>        </td><td>AudioCardio app one hour while working </td>
 <tr><td>9:00 AM</td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td>
 <tr><td>9:30 AM </td><td>Breakfast</td>   
 <tr><td>        </td><td>Blend avocado, dandelion greens, berries, lemon juice, water</td>
@@ -231,6 +232,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Various short exercises</td>
 <tr><td> </td><td>Go outside, look far away</td>
 <tr><td> </td><td>Jump for lymphatic system and to correct posture</td>
+<tr><td> </td><td>Drink water (8 cups per day)</td>
 </table>
 
 <br>
@@ -246,9 +248,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Quarterly Routine</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>VSEL stem cell therapy <a href="https://pubmed.ncbi.nlm.nih.gov/36752298/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Ozone dialysis therapy <a href="https://pubmed.ncbi.nlm.nih.gov/16156950/" target="_blank">Link</a> </td>
-<tr><td> </td><td>Exosome therapy</td>
+<tr><td> </td><td>Plasma dilution therapy <a href="https://pubmed.ncbi.nlm.nih.gov/35999337/" target="_blank">Link</a> </td>
 <tr><td> </td><td>Bioregulator peptides</td>
 </table>
 
@@ -263,6 +264,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Cardiogen, 100mcg</td>
 <tr><td> </td><td>Cortagen, 100mcg</td>
 <tr><td> </td><td>Crystagen, 100mcg</td>
+<!--bacteriostatic water throw out after 30 days -->
+<!--throw out peptides after 30 days?-->
 </table>
 
 <br>
@@ -276,8 +279,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Blood testing at Labcorp or Quest (No biotin for a few days before test) </td>
 <tr><td> </td><td>Stool occult blood immunoassay</td>
-<tr><td> </td><td>Replace shower water filter </td>
+<tr><td> </td><td>Replace whole house water filter </td>
 <tr><td> </td><td>Replace kitchen water filter </td>
+<tr><td> </td><td>Replace shower water filter </td>
 </table>
 
 <br>
@@ -289,6 +293,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Test home for EMFs</td>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td>
 <tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td> <!-- Actionable?-->
+<tr><td> </td><td>Great Plains Labs, Mycotoxin Panel</td>
+<tr><td> </td><td>Great Plains Labs, GPLTOX</td>
+<tr><td> </td><td>Genova Diagnostics, ION Profile</td>
 </table>
 
 <br>
@@ -360,8 +367,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Future Plans</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Sauna </td>
+<tr><td> </td><td>Sauna with electrolytes </td>
 <tr><td> </td><td>PEMF therapy </td>
+<tr><td> </td><td>Exosomes</td>
 <tr><td> </td><td>Blood flow restriction training </td>
 <tr><td> </td><td>Grow all food in my own garden </td>
 <tr><td> </td><td>Oxygen hot tub </td>
